--- a/GhostBlasterSite/index.html
+++ b/GhostBlasterSite/index.html
@@ -75,6 +75,9 @@
             <img src="img/blokschema.png" alt="Blokschema">
         </section>
         <section class="arduinoCode">
+            <h2>Code</h2>
+            <p>Hieronder kan u de verschillende delen code terug vinden van ons project in de verschillende menu's.</p>
+            <a href="">Link naar de GitHub Repository</a>   
             <button class="accordion">Code Lasergun</button>
             <div class="panel">
               <pre>
