--- a/GhostBlasterSite/index.html
+++ b/GhostBlasterSite/index.html
@@ -74,6 +74,12 @@
             <p>Hieronder staat het blokschema van alle hardware componenten</p>
             <img src="img/blokschema.png" alt="Blokschema">
         </section>
+        <section class="fritzing">
+            <h2>Fritzing</h2>
+            <p>Hieronder staat het elektronische Fritzing schema</p>
+            <img src="img/fritzing.png" alt="Fritzing">
+        </section>
+
         <section class="arduinoCode">
             <h2>Code</h2>
             <p>Hieronder kan u de verschillende delen code terug vinden van ons project in de verschillende menu's.</p>
