Toevoegen 2 extra afbeeldingen en extra uitleg spel

--- a/GhostBlasterSite/index.html
+++ b/GhostBlasterSite/index.html
@@ -21,8 +21,12 @@
     </header>
     <main class="container">
         <section class="intro">
-            <img src="img/introimage1.jpg" alt="Afbeelding met GhostBlaster">
-            <p>Ons spel heet GhostBlaster, hierbij is het de bedoeling dat er aan de hand van een geweer, uitgerust met een laser, op verschillende doelwitten schiet. Hieronder wordt verder uitgelegd hoe we dit nu precies hebben uitgewerkt.</p>
+                <img src="img/introimage1.jpg" alt="Afbeelding met GhostBlaster">
+                <p>Ons spel heet GhostBlaster, hierbij is het de bedoeling dat er aan de hand van een geweer, uitgerust met een laser, op verschillende doelwitten schiet. Zo moet je binnen de tijd zoveel mogelijk doelwitten raken om zo een zo hoog mogelijke score te behalen. Er is een display waarop het aantal beschikbare kogels wordt getoond, maar wanneer deze op zijn moet er herladen worden.</p>
+            <div>
+                <img src="img/ghostimg1.jpg" alt="Afbeelding van spookjes">
+                <img src="img/gun1.jpg" alt="Afbeelding van lasergun">
+            </div>
         </section>
         <section class="mainParts">
             <h2>Hoofd onderdelen</h2>
