--- a/GhostBlasterSite/index.html
+++ b/GhostBlasterSite/index.html
@@ -87,7 +87,7 @@
         <section class="arduinoCode">
             <h2>Code</h2>
             <p>Hieronder kan u de verschillende delen code terug vinden van ons project in de verschillende menu's.</p>
-            <a href="">Link naar de GitHub Repository</a>   
+            <a href="https://github.com/sanderbockstaele/hackathonGhostblaster">Link naar de GitHub Repository</a>   
             <button class="accordion">Game code</button>
             <div class="panel">
                 <pre>
